Favorite folders + clipboard monitoring. Add Tips window (should be in previous commit)

--- a/DiGit/App.config
+++ b/DiGit/App.config
@@ -35,7 +35,10 @@
                 <value>5</value>
             </setting>
             <setting name="MenuPathLength" serializeAs="String">
-                <value>30</value>
+                <value>40</value>
+            </setting>
+            <setting name="MenuPathLengthWide" serializeAs="String">
+                <value>80</value>
             </setting>
         </DiGit.Properties.Settings>
     </userSettings>
