--- a/DiGit/Properties/Settings.settings
+++ b/DiGit/Properties/Settings.settings
@@ -27,7 +27,10 @@
       <Value Profile="(Default)">5</Value>
     </Setting>
     <Setting Name="MenuPathLength" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">30</Value>
+      <Value Profile="(Default)">40</Value>
+    </Setting>
+    <Setting Name="MenuPathLengthWide" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">80</Value>
     </Setting>
   </Settings>
 </SettingsFile>
