--- a/DiGit/DiGit.csproj
+++ b/DiGit/DiGit.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Helpers\NotifyPropertyChangedHelper.cs" />
     <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Model\PathClass.cs" />
+    <Compile Include="Model\PathManager.cs" />
     <Compile Include="Model\RepositoriesManager.cs" />
     <Compile Include="Model\BubblesManager.cs" />
     <Compile Include="Helpers\SerializeHelper.cs" />
@@ -141,6 +142,9 @@
     <Compile Include="ViewModel\Base\BaseViewModel.cs" />
     <Compile Include="ViewModel\Base\BaseWindowViewModel.cs" />
     <Compile Include="ViewModel\BubbleViewModel.cs" />
+    <Compile Include="ViewModel\FolderCBViewModel.cs" />
+    <Compile Include="ViewModel\FolderViewModel.cs" />
+    <Compile Include="ViewModel\PathClassViewModel.cs" />
     <Compile Include="ViewModel\RepositoryViewModel.cs" />
     <Compile Include="ViewModel\SettingsViewModel.cs" />
     <Compile Include="ViewModel\Settings\BaseSettingsViewModel.cs" />
@@ -195,7 +199,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="ResourceDictionary\CommandsListResourceDictionary.xaml">
+    <Page Include="ResourceDictionary\--CommandsListResourceDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ResourceDictionary\CommandsListMenuResourceDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -207,9 +215,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="ResourceDictionary\CommandsListMenu.xaml">
+    <Page Include="ResourceDictionary\--CommandsListMenu.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ResourceDictionary\Controls\MenuItem_Test.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ResourceDictionary\Controls\Window.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -387,6 +399,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\SystemIcons\FileExplorer.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SystemIcons\NonFavorite.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Expression\Blend\.NETFramework\v4.5\Microsoft.Expression.Blend.WPF.targets" />
