--- a/DiGit/App.config
+++ b/DiGit/App.config
@@ -40,6 +40,9 @@
             <setting name="MenuPathLengthWide" serializeAs="String">
                 <value>80</value>
             </setting>
+            <setting name="FoldersMRU" serializeAs="String">
+                <value>10</value>
+            </setting>
         </DiGit.Properties.Settings>
     </userSettings>
 </configuration>
