--- a/DiGit/Properties/Settings.settings
+++ b/DiGit/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="MenuPathLengthWide" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">80</Value>
     </Setting>
+    <Setting Name="FoldersMRU" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
