--- a/DiGit/DiGit.csproj
+++ b/DiGit/DiGit.csproj
@@ -39,7 +39,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -148,6 +148,7 @@
     <Compile Include="ViewModel\RepositoryViewModel.cs" />
     <Compile Include="ViewModel\SettingsViewModel.cs" />
     <Compile Include="ViewModel\Settings\BaseSettingsViewModel.cs" />
+    <Compile Include="ViewModel\Settings\BubblesViewModel.cs" />
     <Compile Include="ViewModel\Settings\UserCommandEditViewModel.cs" />
     <Compile Include="ViewModel\Settings\UserCommandsViewModel.cs" />
     <Compile Include="ViewModel\TipsViewModel.cs" />
@@ -164,6 +165,9 @@
     </Compile>
     <Compile Include="View\SettingsView.xaml.cs">
       <DependentUpon>SettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Settings\BubblesView.xaml.cs">
+      <DependentUpon>BubblesView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Settings\UserCommandEditView.xaml.cs">
       <DependentUpon>UserCommandEditView.xaml</DependentUpon>
@@ -257,6 +261,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\SettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Settings\BubblesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
