Change the DiGit.xml location

--- a/DiGit/App.config
+++ b/DiGit/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <DiGit.Properties.Settings>
             <setting name="ConfigFilePath" serializeAs="String">
-                <value>DiGit.xml</value>
+                <value />
             </setting>
             <setting name="InfoUrl" serializeAs="String">
                 <value>O:\dbMotion-Development\dbMotion 2005\Dev\TalB\DiGit\Info</value>
