New Setup 1.0.220 (fixed). + Changed references to Nuget instead of Ms.Expression

--- a/DiGit/App.config
+++ b/DiGit/App.config
@@ -43,6 +43,9 @@
             <setting name="FoldersMRU" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="UpdateRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
         </DiGit.Properties.Settings>
     </userSettings>
 </configuration>
