--- a/DiGit/Properties/Settings.settings
+++ b/DiGit/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="FoldersMRU" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="UpdateRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
