--- a/DiGit/packages.config
+++ b/DiGit/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="AboutBox" version="2.0.0" targetFramework="net45" />
   <package id="LibGit2Sharp" version="0.20.1.0" targetFramework="net45" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net45" />
   <package id="ModernUI.WPF" version="1.0.6" targetFramework="net45" />
 </packages>
