--- a/DiGit/App.config
+++ b/DiGit/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="DiGit.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DiGit.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -43,6 +46,16 @@
             <setting name="FoldersMRU" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="DiGitCommandID_Prefix" serializeAs="String">
+                <value>digit-command</value>
+            </setting>
         </DiGit.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <DiGit.Properties.Settings>
+            <setting name="DiGitCommandID_Template" serializeAs="String">
+                <value>digit-command-{0}</value>
+            </setting>
+        </DiGit.Properties.Settings>
+    </applicationSettings>
 </configuration>
