--- a/DiGit/App.config
+++ b/DiGit/App.config
@@ -49,6 +49,9 @@
             <setting name="DiGitCommandID_Prefix" serializeAs="String">
                 <value>digit-command</value>
             </setting>
+            <setting name="SettingsUpgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
         </DiGit.Properties.Settings>
     </userSettings>
     <applicationSettings>
