Add versioning extension methods for consistent version comparison

--- a/DiGit/DiGit.csproj
+++ b/DiGit/DiGit.csproj
@@ -141,6 +141,7 @@
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
     <Compile Include="Versioning\DiGitVersionInfo.cs" />
+    <Compile Include="Versioning\ExtensionMethods.cs" />
     <Compile Include="Versioning\UpdateManager.cs" />
     <Compile Include="ViewModel\AboutViewModel.cs" />
     <Compile Include="ViewModel\Base\BaseDialogViewModel.cs" />
