--- a/DiGit/App.config
+++ b/DiGit/App.config
@@ -16,8 +16,8 @@
             <setting name="ConfigFilePath" serializeAs="String">
                 <value />
             </setting>
-            <setting name="InfoUrl" serializeAs="String">
-                <value>O:\dbMotion-Development\dbMotion 2005\Dev\TalB\DiGit\Info</value>
+            <setting name="VersionInfoUrl" serializeAs="String">
+                <value>https://github.com/tbener/DiGit/raw/DiGit/Setup/DiGitVersionInfo.xml</value>
             </setting>
             <setting name="RegistrationFile" serializeAs="String">
                 <value>Users.xml</value>
